@@ -56,3 +56,4 @@ FrmMain: Replace feature list with feature grid (from FeatureAdmin2007)
     FeatureActivator from old version of FeatureAdmin2007
  FeatureDatabase: More careful exception handling & use feature definition
   DisplayName when feature definition GetTitle throws exception
+Move "Clear Log" button into Log panel
